2015-04-22  Zan Dobersek  <zdobersek@igalia.com>

        [WK2] Have API::Array creation methods return Ref<>
        https://bugs.webkit.org/show_bug.cgi?id=143933

        Reviewed by Darin Adler.

        API::Array::create() and API::Array::createStringArray() should return Ref<> objects
        as the return values are never null. It's up to the caller to implicitly convert the
        returned objects to RefPtr<> if so required. All the call-sites have been updated to
        reflect that.

        * Shared/API/APIArray.cpp:
        (API::Array::create):
        (API::Array::createStringArray):
        (API::Array::copy):
        * Shared/API/APIArray.h:
        * Shared/API/APIDictionary.cpp:
        (API::Dictionary::keys):
        * Shared/API/APIDictionary.h:
        * Shared/API/Cocoa/WKRemoteObjectCoder.mm:
        (ensureObjectStream):
        * Shared/API/c/WKArray.cpp:
        (WKArrayCreate):
        (WKArrayCreateAdoptingValues):
        * Shared/API/c/WKContextMenuItem.cpp:
        (WKContextMenuCopySubmenuItems):
        * Shared/API/c/WKDictionary.cpp:
        (WKDictionaryCopyKeys):
        * Shared/API/c/WKMutableArray.cpp:
        (WKMutableArrayCreate):
        * Shared/Cocoa/WKNSDictionary.mm:
        (-[WKNSDictionary keyEnumerator]):
        * Shared/SecurityOriginData.cpp:
        (WebKit::performAPICallbackWithSecurityOriginDataVector):
        * Shared/WebContextMenuItem.cpp:
        (WebKit::WebContextMenuItem::submenuItemsAsAPIArray):
        * Shared/WebContextMenuItem.h:
        * Shared/WebOpenPanelParameters.cpp:
        (WebKit::WebOpenPanelParameters::acceptMIMETypes):
        (WebKit::WebOpenPanelParameters::selectedFileNames):
        * Shared/WebOpenPanelParameters.h:
        * UIProcess/API/C/WKBackForwardListRef.cpp:
        (WKBackForwardListCopyBackListWithLimit):
        (WKBackForwardListCopyForwardListWithLimit):
        * UIProcess/API/C/WKGrammarDetail.cpp:
        (WKGrammarDetailCopyGuesses):